Fix NoClassDefFoundError in test