@@ -76,6 +76,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
+                                <configuration>
+					<argLine>--add-modules org.slf4j</argLine>
+                                </configuration>
 			</plugin>
 		</plugins>
 	</build>
